Changed Handle Storage
